--- a/JS Project/index.html
+++ b/JS Project/index.html
@@ -4,5 +4,6 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <script type="text/javascript" src="src\scenes\LoadingScene.js"></script>
   </body>
 </html>
